--- a/please-protect-api/please-protect-api.csproj
+++ b/please-protect-api/please-protect-api.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="KubernetesClient" Version="18.0.13" />
     <PackageReference Include="LinqKit" Version="1.3.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.8" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.8">
